[fix] trx table overflow on mobile page

--- a/web/assets/components/detailPage/detailPageLight.scss
+++ b/web/assets/components/detailPage/detailPageLight.scss
@@ -85,6 +85,7 @@
 
             th span {
                 font-size: 12px !important;
+                min-width: unset; 
             }
 
             th.mid {
